--- a/src/Components/VideoFooter.css
+++ b/src/Components/VideoFooter.css
@@ -28,7 +28,7 @@
     display: flex;
     position: absolute;
     width:95%;
-    color: white;
+    color: yellow;
     justify-content: space-between;   
 }
 
