--- a/src/Components/VideoCard.css
+++ b/src/Components/VideoCard.css
@@ -1,6 +1,6 @@
 .videoCard {
     position: relative;
-    border: 1px solid black;
+    border: 1px solid white;
     width: 100%;
     height: 100%;
     scroll-snap-align:start;
