--- a/src/Components/VideoFooter.css
+++ b/src/Components/VideoFooter.css
@@ -19,7 +19,7 @@
 }
 
 .videoFooter__text > h3 > button {
-    color: white;
+    color: blue;
     font-weight: 900;
     text-transform: inherit;
 }
